deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: releaseapp-deployment
  labels:
    app: releaseapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: releaseapp
  template:
    metadata:
      labels:
        app: releaseapp
    spec:
      containers:
        - name: releaseapp
          image: iheb49/releaseapp:35f5950afee374aeaa7341125a205283c58a2f96
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
