service.yaml
apiVersion: v1
kind: Service
metadata:
  name: releaseapp-service
spec:
  selector:
    app: releaseapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
