ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: releaseapp-ingress
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: releaseapp-service
                port:
                  number: 80
